--- a/handins/handin3.ipynb
+++ b/handins/handin3.ipynb
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": null,
    "id": "fourth-shopper",
    "metadata": {},
    "outputs": [],
@@ -940,7 +940,22 @@
     "        self.root           = Node(header_table = self.header_table)\n",
     "        \n",
     "        ### YOUR CODE HERE\n",
-    "        \n",
+    "        freq = {}\n",
+    "        for transaction in T:\n",
+    "            for item in transaction:\n",
+    "                if item in freq:\n",
+    "                    freq[item] += 1\n",
+    "                else:\n",
+    "                    freq[item] = 1\n",
+    "\n",
+    "        freq = {item : count for item, count in freq.items() if count >= min_support}\n",
+    "        sorted_items = sorted(freq.items(), key = lambda x: (-x[1], x[0]))\n",
+    "        ordering = {item: i for i, (item, _) in enumerate(sorted_items)}\n",
+    "\n",
+    "        for transaction in T:\n",
+    "            filtered = [item for item in transaction if item in freq]\n",
+    "            sorted_path = sorted(filtered, key = lambda item : ordering[item])\n",
+    "            self.root.add_path(sorted_path)\n",
     "        ### YOUR CODE HERE\n",
     "    \n",
     "    \n",
@@ -1040,7 +1055,15 @@
     "            self.value          = value\n",
     "            self.parent         = parent\n",
     "            # YOUR CODE HERE\n",
+    "            self.count = 1\n",
     "\n",
+    "            if value in header_table:\n",
+    "                current = header_table[value]\n",
+    "                while current.nodelink is not None:\n",
+    "                    current = current.nodelink\n",
+    "                current.nodelink = self\n",
+    "            else:\n",
+    "                header_table[value] = self\n",
     "            # YOUR CODE HERE\n",
     "        \n",
     "        if path is not None: \n",
@@ -1059,7 +1082,18 @@
     "        \"\"\"\n",
     "        \n",
     "        ### YOUR CODE HERE\n",
+    "        if not path:\n",
+    "            return\n",
     "        \n",
+    "        first, *rest = path\n",
+    "        if first in self.children:\n",
+    "            child = self.children[first]\n",
+    "            child.count += 1\n",
+    "        else:\n",
+    "            child = Node(header_table=self.header_table, value = first, parent = self)\n",
+    "            self.chilren[first] = child\n",
+    "\n",
+    "        child.add_path(rest)\n",
     "        ### YOUR CODE HERE\n",
     "    \n",
     "    \n",
@@ -1094,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 296,
    "id": "undefined-lodging",
    "metadata": {},
    "outputs": [],
@@ -1116,15 +1150,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 297,
    "id": "human-proposal",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
+     "ename": "NameError",
+     "evalue": "name 'Counter' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[297], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m### YOUR CODE HERE\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m fp_tree \u001b[38;5;241m=\u001b[39m \u001b[43mFP_Tree\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkosarak\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m30000\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m freq1 \u001b[38;5;241m=\u001b[39m fp_tree\u001b[38;5;241m.\u001b[39mmine_frequent_itemsets()\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(freq1)\n",
+      "Cell \u001b[1;32mIn[295], line 18\u001b[0m, in \u001b[0;36mFP_Tree.__init__\u001b[1;34m(self, T, min_support)\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m### YOUR CODE HERE\u001b[39;00m\n\u001b[0;32m     17\u001b[0m flat \u001b[38;5;241m=\u001b[39m [item \u001b[38;5;28;01mfor\u001b[39;00m transaction \u001b[38;5;129;01min\u001b[39;00m T \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m transaction]\n\u001b[1;32m---> 18\u001b[0m freq \u001b[38;5;241m=\u001b[39m \u001b[43mCounter\u001b[49m(flat)\n\u001b[0;32m     20\u001b[0m freq \u001b[38;5;241m=\u001b[39m {item : count \u001b[38;5;28;01mfor\u001b[39;00m item, count \u001b[38;5;129;01min\u001b[39;00m freq\u001b[38;5;241m.\u001b[39mitems() \u001b[38;5;28;01mif\u001b[39;00m count \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m min_support}\n\u001b[0;32m     21\u001b[0m sorted_items \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msorted\u001b[39m(freq\u001b[38;5;241m.\u001b[39mitems(), key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mlambda\u001b[39;00m x: (\u001b[38;5;241m-\u001b[39mx[\u001b[38;5;241m1\u001b[39m], x[\u001b[38;5;241m0\u001b[39m]))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Counter' is not defined"
      ]
     }
    ],
@@ -1147,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": null,
    "id": "fitted-identity",
    "metadata": {},
    "outputs": [
