--- a/handins/handin3.ipynb
+++ b/handins/handin3.ipynb
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 304,
    "id": "fourth-shopper",
    "metadata": {},
    "outputs": [],
@@ -1091,7 +1091,7 @@
     "            child.count += 1\n",
     "        else:\n",
     "            child = Node(header_table=self.header_table, value = first, parent = self)\n",
-    "            self.chilren[first] = child\n",
+    "            self.children[first] = child\n",
     "\n",
     "        child.add_path(rest)\n",
     "        ### YOUR CODE HERE\n",
@@ -1128,12 +1128,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": null,
    "id": "undefined-lodging",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frequent Itemsets:\n",
+      "(2, 1, 3) → 2\n",
+      "(2, 1, 5) → 2\n",
+      "(1, 3) → 4\n",
+      "(1, 5) → 2\n",
+      "(2, 1) → 4\n",
+      "(2, 3) → 4\n",
+      "(2, 4) → 2\n",
+      "(2, 5) → 2\n",
+      "(1,) → 6\n",
+      "(2,) → 7\n",
+      "(3,) → 6\n",
+      "(4,) → 2\n",
+      "(5,) → 2\n"
+     ]
+    }
+   ],
    "source": [
-    "### YOUR TEST CODE HERE"
+    "### YOUR TEST CODE HERE\n",
+    "\n",
+    "def test_fp_tree_basic():\n",
+    "    transactions = [\n",
+    "        [1, 2, 5],\n",
+    "        [2, 4],\n",
+    "        [2, 3],\n",
+    "        [1, 2, 4],\n",
+    "        [1, 3],\n",
+    "        [2, 3],\n",
+    "        [1, 3],\n",
+    "        [1, 2, 3, 5],\n",
+    "        [1, 2, 3]\n",
+    "    ]\n",
+    "\n",
+    "    min_support = 2\n",
+    "\n",
+    "    \n",
+    "    tree = FP_Tree(transactions, min_support=min_support)\n",
+    "\n",
+    "    \n",
+    "    frequent_itemsets = tree.mine_frequent_itemsets()\n",
+    "\n",
+    "    \n",
+    "    frequent_itemsets = sorted(frequent_itemsets, key=lambda x: (-len(x[0]), x[0]))\n",
+    "\n",
+    "    print(\"Frequent Itemsets:\")\n",
+    "    for itemset, count in frequent_itemsets:\n",
+    "        print(f\"{itemset} → {count}\")\n",
+    "\n",
+    "test_fp_tree_basic()\n",
+    "\n"
    ]
   },
   {
@@ -1150,28 +1202,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 331,
    "id": "human-proposal",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Counter' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[297], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m### YOUR CODE HERE\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m fp_tree \u001b[38;5;241m=\u001b[39m \u001b[43mFP_Tree\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkosarak\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m30000\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m freq1 \u001b[38;5;241m=\u001b[39m fp_tree\u001b[38;5;241m.\u001b[39mmine_frequent_itemsets()\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(freq1)\n",
-      "Cell \u001b[1;32mIn[295], line 18\u001b[0m, in \u001b[0;36mFP_Tree.__init__\u001b[1;34m(self, T, min_support)\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m### YOUR CODE HERE\u001b[39;00m\n\u001b[0;32m     17\u001b[0m flat \u001b[38;5;241m=\u001b[39m [item \u001b[38;5;28;01mfor\u001b[39;00m transaction \u001b[38;5;129;01min\u001b[39;00m T \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m transaction]\n\u001b[1;32m---> 18\u001b[0m freq \u001b[38;5;241m=\u001b[39m \u001b[43mCounter\u001b[49m(flat)\n\u001b[0;32m     20\u001b[0m freq \u001b[38;5;241m=\u001b[39m {item : count \u001b[38;5;28;01mfor\u001b[39;00m item, count \u001b[38;5;129;01min\u001b[39;00m freq\u001b[38;5;241m.\u001b[39mitems() \u001b[38;5;28;01mif\u001b[39;00m count \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m min_support}\n\u001b[0;32m     21\u001b[0m sorted_items \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msorted\u001b[39m(freq\u001b[38;5;241m.\u001b[39mitems(), key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mlambda\u001b[39;00m x: (\u001b[38;5;241m-\u001b[39mx[\u001b[38;5;241m1\u001b[39m], x[\u001b[38;5;241m0\u001b[39m]))\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Counter' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[((32,), 15167), ((39, 32), 8455), ((48, 32), 8034), ((39,), 50675), ((38,), 15596), ((39, 38), 10345), ((41,), 14945), ((39, 41), 11414), ((48, 41), 9018), ((48,), 42135), ((39, 48), 29142)]\n"
      ]
     }
    ],
    "source": [
     "### YOUR CODE HERE\n",
-    "fp_tree = FP_Tree(kosarak, 30000)\n",
+    "fp_tree = FP_Tree(kosarak, 8000)\n",
     "freq1 = fp_tree.mine_frequent_itemsets()\n",
     "print(freq1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc5b6af9",
+   "metadata": {},
+   "source": [
+    "******************\n",
+    "<span style=\"color:red\">**YOUR ANSWER HERE**</span>\n",
+    "\n",
+    "\n",
+    "We got it to be approx 8000, the value of the min_support.\n",
+    "\n",
+    "******************"
    ]
   },
   {
@@ -1186,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 332,
    "id": "fitted-identity",
    "metadata": {},
    "outputs": [
@@ -1204,8 +1265,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[294], line 69\u001b[0m\n\u001b[0;32m     65\u001b[0m     np\u001b[38;5;241m.\u001b[39msave(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mitemsets_stderr\u001b[39m\u001b[38;5;124m'\u001b[39m, stderrs)\n\u001b[0;32m     67\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m results, stderrs\n\u001b[1;32m---> 69\u001b[0m results, stderrs \u001b[38;5;241m=\u001b[39m \u001b[43mtest\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m     \n",
-      "Cell \u001b[1;32mIn[294], line 51\u001b[0m, in \u001b[0;36mtest\u001b[1;34m()\u001b[0m\n\u001b[0;32m     49\u001b[0m i2 \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m     50\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m V \u001b[38;5;129;01min\u001b[39;00m itemsets\u001b[38;5;241m.\u001b[39mvalues():\n\u001b[1;32m---> 51\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m \u001b[43mV\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitems\u001b[49m():\n\u001b[0;32m     52\u001b[0m         i2[\u001b[38;5;28mtuple\u001b[39m(\u001b[38;5;28msorted\u001b[39m(\u001b[38;5;28mlist\u001b[39m(k)))] \u001b[38;5;241m=\u001b[39m v\n\u001b[0;32m     54\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(i1) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mlen\u001b[39m(i2)\n",
+      "Cell \u001b[1;32mIn[332], line 69\u001b[0m\n\u001b[0;32m     65\u001b[0m     np\u001b[38;5;241m.\u001b[39msave(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mitemsets_stderr\u001b[39m\u001b[38;5;124m'\u001b[39m, stderrs)\n\u001b[0;32m     67\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m results, stderrs\n\u001b[1;32m---> 69\u001b[0m results, stderrs \u001b[38;5;241m=\u001b[39m \u001b[43mtest\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m     \n",
+      "Cell \u001b[1;32mIn[332], line 51\u001b[0m, in \u001b[0;36mtest\u001b[1;34m()\u001b[0m\n\u001b[0;32m     49\u001b[0m i2 \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m     50\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m V \u001b[38;5;129;01min\u001b[39;00m itemsets\u001b[38;5;241m.\u001b[39mvalues():\n\u001b[1;32m---> 51\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m \u001b[43mV\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitems\u001b[49m():\n\u001b[0;32m     52\u001b[0m         i2[\u001b[38;5;28mtuple\u001b[39m(\u001b[38;5;28msorted\u001b[39m(\u001b[38;5;28mlist\u001b[39m(k)))] \u001b[38;5;241m=\u001b[39m v\n\u001b[0;32m     54\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(i1) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mlen\u001b[39m(i2)\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'int' object has no attribute 'items'"
      ]
     }
