--- a/handins/handin3.ipynb
+++ b/handins/handin3.ipynb
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": null,
    "id": "productive-fourth",
    "metadata": {},
    "outputs": [],
@@ -756,25 +756,23 @@
     "    ### TODO Your code here\n",
     "\n",
     "    # Step 1: Count 1-itemsets\n",
-    "    item_count = {}#defaultdict(int)\n",
+    "    item_count = {}\n",
     "    for transaction in T:\n",
     "        for item in transaction:\n",
     "            item_count[(item,)] = item_count.get((item,), 0) + 1\n",
     "\n",
     "    # Filter by min_support\n",
     "    Lk = {itemset: count for itemset, count in item_count.items() if count >= min_support}\n",
-    "    # itemsets.update(Lk)\n",
     "    k = 1\n",
     "    itemsets[k] = Lk\n",
     "\n",
     "    # Iteratively find larger frequent itemsets\n",
-    "    #k = 2\n",
     "    while Lk:\n",
-    "        prev_itemsets = set(Lk.keys())#set(tuple(sorted(itemset)) for itemset in Lk.keys())\n",
+    "        prev_itemsets = set(Lk.keys())\n",
     "        Ck = compute_candidates(prev_itemsets)\n",
     "\n",
     "        # Count support for Ck\n",
-    "        Ck_count = {}#defaultdict(int)\n",
+    "        Ck_count = {}\n",
     "        for transaction in T:\n",
     "            t_set = set(transaction)\n",
     "            for candidate in Ck:\n",
@@ -783,7 +781,6 @@
     "\n",
     "        # Filter by min_support\n",
     "        Lk = {itemset: count for itemset, count in Ck_count.items() if count >= min_support}\n",
-    "        #itemsets.update(Lk)\n",
     "        k += 1\n",
     "        if Lk:\n",
     "            itemsets[k] = Lk\n",
@@ -1467,6 +1464,9 @@
    "source": [
     "*******************\n",
     "<span style=\"color:red\">**YOUR ANSWER HERE**</span>\n",
+    "\n",
+    "The output is correct, showcasing that FP-Tree is much more time efficient than Apriori, given that we deal with a large alphabet time, whereas given low alphabet, their efficient is quite similar (seen from alphabet size 3)\n",
+    "\n",
     "******************"
    ]
   },
