both 1 and 2 are fully done.

--- a/handins/handin3.ipynb
+++ b/handins/handin3.ipynb
@@ -738,7 +738,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from collections import defaultdict\n",
+    "\n",
     "\n",
     "def apriori_algorithm(T, min_support=10):\n",
     "    \"\"\"\n",
@@ -1465,7 +1465,9 @@
     "*******************\n",
     "<span style=\"color:red\">**YOUR ANSWER HERE**</span>\n",
     "\n",
-    "The output is correct, showcasing that FP-Tree is much more time efficient than Apriori, given that we deal with a large alphabet time, whereas given low alphabet, their efficient is quite similar (seen from alphabet size 3)\n",
+    "The output is correct, showcasing that FP-Tree is much more time efficient than Apriori, given that we deal with a large alphabet time, whereas given low alphabet, their efficient is quite similar (seen from alphabet size 3). Why Apriori is a little more efficient for simple alphabet than FP-Tree is because of the tree building overhead, which, as we see given more and more complex structure, pays off at the end. \n",
+    "\n",
+    "Why do we expect this? Briefly, Apriori explicitly generates candidates at each level, as well as having one database scan for eac individual level, whereas FP-Growth doesn't have the candidate generation, and only 2 full passes scans, regarding building and mining, are taken into place. \n",
     "\n",
     "******************"
    ]
